--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>AppInfos</title>
 </head>
 <body>
-    
+    Bienvenue sur ma page de présentation de mes applications !
 </body>
 </html>
